Fixed alignement for lineup, worked on H1 style, work in progress, do not panic

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -75,12 +75,25 @@ BODY {
 
 
 .lineup {
-margin : 20px;
+	margin : 0px auto;
+	width: 90%;
+	padding-top: 0;
 }
 
 .lineup h1 {
+	margin-top: 0px;
+	padding-top: 5px;
 	color:#006BA3;
 	text-align:center;
+	vertical-align:middle;
+	font: bold italic 2em/1em "Times New Roman", "MS Serif", "New York", serif;
+	background: url("/img/transbg.png");
+	border-right: solid #006BA3 1px;
+	border-bottom: solid #006BA3 1px;
+	border-bottom-left-radius: 1em 3em;
+	border-bottom-right-radius: 8px;
+	height:50px;
+	
 }	
 
 .lineup ul { 
@@ -112,8 +125,8 @@ margin : 20px;
 	border-bottom-color: #333;
 	border-left-color:#000;
 	border-top-color:#000;
-	margin-bottom:10px;
-	margin-left:10px;
+	margin-bottom:15px;
+	margin-left:23px;
 }
 
 ul.topnav li {
@@ -269,7 +282,7 @@ ul.sdt_menu li div.sdt_box{
 	border-right-style: solid;
 	border-bottom-style: solid;
 	border-right-color: #006BA3;
-	border-bottom-color: #111;
+	border-bottom-color: #006BA3;
 }
 ul.sdt_menu li div.sdt_box a{
 	float:left;
@@ -290,15 +303,8 @@ ul.sdt_menu li div.sdt_box a:hover{
 	width:220px;
 	float: right;
 	padding: 7px;
-	margin-top: 60px;
+	margin-top: 61px;
 	margin-right:2px;
-	border-width:1px;
-	border-bottom-right-radius: 6px;
-	border-bottom-left-radius: 6px;
-	border-bottom-style: solid;
-	border-right-color: #006BA3;
-	border-bottom-color: #111;
-	z-indez:999999999;
 }
 
 	
